--- a/blog/.env
+++ b/blog/.env
@@ -24,13 +24,15 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=app.debugmail.io
+MAIL_PORT=25
+MAIL_USERNAME=ed4f0b2a-a1c6-482f-8693-d3384584f37a
+MAIL_PASSWORD=23b03df6-3f98-4554-af35-97a88a70d2f9
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
