--- a/blog/.env
+++ b/blog/.env
@@ -29,7 +29,7 @@ MAIL_PORT=25
 MAIL_USERNAME=ed4f0b2a-a1c6-482f-8693-d3384584f37a
 MAIL_PASSWORD=23b03df6-3f98-4554-af35-97a88a70d2f9
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="transbaikal_tourism@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 
